# ur_milling

./: CMakeLists.txt  imgui.ini  package.xml
config/: Calibration_20160607.txt  collision_environment.yaml  grasping_poses.yaml  milling_param.yaml  serial_stacking_parameters.yaml  set_grasping_pose_parameters.yaml  stack_each_parameters.yaml  stacking_configuration_serial.yaml
data/: housing.blend  housing.blend1  mounter_v3.stl  test.txt
data/brK/K1a_K3b/: robot_cut_K1a.txt  robot_cut_K3b.txt
data/brK/K1a_K3b/old/: robot_cut_K3b.txt
data/brK/K1b (F1c)/: robot_cut_K1b.txt
data/brK/K2a_K3a/: robot_cut_K2a.txt  robot_cut_K3a.txt
data/brT/: 1_first_sidecut_T1.txt  1_first_sidecut_T2.txt  2_second_sidecut_T1.txt  2_second_sidecut_T2.txt  3_centercut_T1.txt  3_centercut_T2.txt
data/brT/old/: 1_first_sidecut_T1.txt  2_second_sidecut_T1.txt  3_centercut_T1.txt
include/ur3_milling/: CameraCalibration.hpp  GraspObject.hpp  GripperInterface.hpp  MillingPath.hpp  Object.hpp  PlaceObject.hpp  SetGraspingPose.hpp  StackEach.hpp  Surface.hpp
launch/: camera_calibration.launch  frame_broadcaster.launch  milling.launch  planning_scene_tutorial.launch  serial_stacking_with_detection.launch  set_grasping_pose.launch  spawn_robot.launch  stack_each.launch
script/: axis_move_test.py  gcode_branch1.gcode  imgui.ini  moveit_test.py  numpy_test.py  repeatability_test.py
src/: CameraCalibration.cpp  GraspObject.cpp  GripperInterface.cpp  MillingPath.cpp  Object.cpp  ObjectTFPublisher.cpp  PlaceObject.cpp  camera_calibration_node.cpp  milling_path.cpp  milling_path_node.cpp  stand_alone_milling.cpp
